<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="btn_review">Review rooms…</string>
    <string name="btn_room">Start cleaning</string>
    <string name="cb_t_desk">Teacher desks/chairs</string>
    <string name="cb_s_desk">Student desks/chairs</string>
    <string name="cb_floor">Floors swept/mopped as needed</string>
    <string name="cb_carpets">Carpets vacuumed</string>
    <string name="cb_bath_c">Bathroom(s) cleaned</string>
    <string name="cb_bath_s">Bathroom(s) sanitized</string>
    <string name="cb_sanitizer">Room checked for sanitizer</string>
    <string name="btn_next">Next room</string>
    <string name="btn_exit">Return to menu</string>
    <string name="btn_notes">Add note to this room</string>
    <string name="cb_handles">Door handles sanitized</string>
    <string name="info_box">Info goes here!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="capture">Capture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_cam">Take picture…</string>
    <string name="take_picture">Take picture</string>
    <string name="lbl_audio">Voice Message Recorder</string>
    <string name="take_audio">Voice message</string>
    <string name="typed_msg">Type a message</string>
    <string name="user_lbl">Select user…</string>
    <string name="user_btn">%1$s %2$s</string>
    <string name="RmSelect">Select Starting room…</string>
    <string name="back">Go back</string>
    <string name="save">Save</string>
    <string name="retake">Retake picture</string>
    <string name="startRec">Start recording</string>
    <string name="stopRec">Stop recording</string>
    <string name="playRec">Play recording</string>
    <string name="stopPlay">Stop playback</string>
    <string name="saveAudio">Save audio file</string>
</resources>